--- a/src/main/resources/com/example/financemanager/income-view.fxml
+++ b/src/main/resources/com/example/financemanager/income-view.fxml
@@ -7,17 +7,17 @@
 <?import javafx.scene.layout.VBox?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="750.0"
             stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            fx:controller="com.example.financemanager.controller.ExpenseController">
+            fx:controller="com.example.financemanager.controller.IncomeController">
     <top>
         <fx:include source="header.fxml"/>
     </top>
     <center>
         <VBox spacing="10" styleClass="background-pane">
             <HBox alignment="CENTER">
-                <Label styleClass="title-text" text="Tableau récapitulatif des dépenses"/>
+                <Label styleClass="title-text" text="Tableau récapitulatif des revenus"/>
             </HBox>
             <VBox>
-                <TableView fx:id="expenseTable">
+                <TableView fx:id="incomeTable">
                     <columns>
                         <TableColumn editable="false" text="Période">
                             <cellValueFactory>
@@ -29,37 +29,27 @@
                                 <PropertyValueFactory property="total"/>
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn editable="false" text="Logement">
+                        <TableColumn editable="false" text="Salaire">
                             <cellValueFactory>
-                                <PropertyValueFactory property="housing"/>
+                                <PropertyValueFactory property="salary"/>
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn editable="false" text="Nourriture">
+                        <TableColumn editable="false" text="Aides">
                             <cellValueFactory>
-                                <PropertyValueFactory property="food"/>
+                                <PropertyValueFactory property="aids"/>
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn editable="false" text="Sorties">
+                        <TableColumn editable="false" text="Renvenus d'autoentreprise">
                             <cellValueFactory>
-                                <PropertyValueFactory property="goingOut"/>
+                                <PropertyValueFactory property="freelance"/>
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn editable="false" text="Transport">
+                        <TableColumn editable="false" text="Revenus passifs">
                             <cellValueFactory>
-                                <PropertyValueFactory property="transportation"/>
+                                <PropertyValueFactory property="passive"/>
                             </cellValueFactory>
                         </TableColumn>
-                        <TableColumn editable="false" text="Voyage">
-                            <cellValueFactory>
-                                <PropertyValueFactory property="travel"/>
-                            </cellValueFactory>
-                        </TableColumn>
-                        <TableColumn editable="false" text="Impôts">
-                            <cellValueFactory>
-                                <PropertyValueFactory property="tax"/>
-                            </cellValueFactory>
-                        </TableColumn>
-                        <TableColumn editable="false" text="Autres">
+                        <TableColumn editable="false" text="Autre">
                             <cellValueFactory>
                                 <PropertyValueFactory property="other"/>
                             </cellValueFactory>
@@ -71,8 +61,7 @@
                 </TableView>
             </VBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="40.0" spacing="20.0" BorderPane.alignment="CENTER">
-                <Button text="Ajouter" onAction="#addExpense"/>
-                <Button text="Suprimer" onAction="#deleteExpense"/>
+                <Button text="Ajouter" onAction="#addIncome"/>
             </HBox>
         </VBox>
     </center>
